--- a/src/styles.css
+++ b/src/styles.css
@@ -21,12 +21,31 @@ body {
 }
 
 /* Navbar */
+.navbar {
+    background: var(--body-background);
+}
+
+.navbar-brand {
+    font-family: var(--heading-font);
+    text-shadow: var(--heading-colour) 2px 2px 3px;
+    color: var(--text-colour);
+}
+
+.nav-link {
+    color: var(--text-colour);
+}
+
+.nav-link:hover {
+    color: var(--heading-colour);
+}
+
 /* Banner */
 .banner {
     background: url(./media/AWiA-banner.png) #fff no-repeat;
     background-size: 100%;
     height: 210px;
 }
+
 /* Hero */
 .hero {
     text-align: center;
@@ -35,12 +54,60 @@ body {
 
 .hero > h2, .hero > h3 {
     font-family: var(--text-font);
+    color: var(--text-colour);
 }
 
 .hero > h1 {
     font-family: var(--heading-font);
+    color: var(--heading-colour);
+    text-shadow: rgb(238, 191, 232) 2px 2px 3px;
 }
 
+/* Intro Section */
+.intro > h2 > span {
+    font-family: var(--heading-font);
+    color: var(--heading-colour);
+    text-shadow: rgb(238, 191, 232) 2px 2px 3px;
+}
+
+.intro > h2 {
+    font-family: var(--text-font);
+    color: var(--text-colour);
+    margin: 20px 0;
+}
+
+/* Footer */
+.footer {
+    text-align: center;
+    margin: 20px 0;
+}
+
+.footer > footer {
+    font-family: var(--text-font);
+    color: var(--text-colour);
+}
+
+.footer > footer > a {
+    color: var(--heading-colour);
+    text-decoration: none;
+}
+
+.footer > footer > a:hover {
+    text-decoration: underline;
+}
+
+.intro > p {
+    color: var(--text-colour);
+    font-family: var(--text-font);
+    font-size: 18px;
+}
+
+.intro > div > h3 {
+    color: var(--heading-colour);
+    font-family: var(--text-font);
+    font-size: 25px;
+    padding: 20px 80px
+}
 
 @media (max-width: 450px) {
     .banner {
