--- a/src/styles.css
+++ b/src/styles.css
@@ -155,6 +155,40 @@ body {
     font-size: 18px;
 }
 
+/* Meet the team */
+.meet-team-info {
+    margin: 30px auto;
+}
+
+.meet-team-info > h1 {
+    font-family: var(--text-font);
+    color: var(--text-colour);
+    margin: 20px 0
+}
+
+.meet-team-info > .profile {
+    margin: 30px auto;
+}
+
+.meet-team-info > .profile  > img {
+    border-radius: 50%;
+    border: var(--heading-colour) solid 3px;
+    width: 200px;
+    height: 200px;
+}
+
+.meet-team-info > .profile  > h3 {
+    color: var(--heading-colour);
+    font-family: var(--text-font);
+    margin: 20px 0;
+}
+
+.meet-team-info > .profile > p {
+    font-family: var(--text-font);
+    color: var(--text-colour);
+    font-size: 18px;
+}
+
 .footer > footer > a {
     color: var(--heading-colour);
     text-decoration: none;
