--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .navbar-brand {
-    font-family: var(--heading-font);
+    font-family: var(--text-font);
     text-shadow: var(--heading-colour) 2px 2px 3px;
     color: var(--text-colour);
 }
@@ -37,26 +37,8 @@ body {
     height: 210px;
 }
 
-/* Hero */
-.hero {
-    text-align: center;
-    margin: 20px 0;
-}
-
-.hero > h2, .hero > h3 {
-    font-family: var(--text-font);
-    color: var(--text-colour);
-}
-
-.hero > h1 {
-    font-family: var(--heading-font);
-    color: var(--heading-colour);
-    text-shadow: rgb(238, 191, 232) 2px 2px 3px;
-}
-
 /* Intro Section */
 .intro > h2 > span {
-    font-family: var(--heading-font);
     color: var(--heading-colour);
     text-shadow: rgb(238, 191, 232) 2px 2px 3px;
 }
@@ -97,7 +79,6 @@ body {
 }
 
 .about-info > h2 > span {
-    font-family: var(--heading-font);
     color: var(--heading-colour);
     text-shadow: rgb(238, 191, 232) 2px 2px 3px;
 }
@@ -126,7 +107,6 @@ body {
 }
 
 .projects-info > h1 > span {
-    font-family: var(--heading-font);
     color: var(--heading-colour);
     text-shadow: rgb(238, 191, 232) 2px 2px 3px;
 }
@@ -158,6 +138,11 @@ body {
 /* Meet the team */
 .meet-team-info {
     margin: 30px auto;
+}
+
+.meet-team-info > h1 > span {
+    color: var(--heading-colour);
+    text-shadow: rgb(238, 191, 232) 2px 2px 3px;
 }
 
 .meet-team-info > h1 {
@@ -197,6 +182,11 @@ body {
 .contact-info > .contacts {
     margin: 30px auto;
     text-align: center;
+}
+
+.contact-info > h1 > span {
+    color: var(--heading-colour);
+    text-shadow: rgb(238, 191, 232) 2px 2px 3px;
 }
 
 .contact-info > h1 {
